Aula 4 Liberada, aula sobre componentes

--- a/2-componentes/index.html
+++ b/2-componentes/index.html
@@ -14,6 +14,7 @@
         <li>Precisamos <span>criar um arquivo</span> de componente</li>
         <li>E <span>importá-lo</span> onde precisamos ultilizar</li>
         <li>Normalmente ficam em uma pasta chamada <span>components</span></li>
+        <li>Existe uma <span>convenção</span> em relação aos nomes de componentes, e ela diz que todos os componentes <span>devem</span> ter a inicial <span>maiúscula</span></li>
     </ul>
 </body>
 </html>
